service.yaml
apiVersion: v1
kind: Service
metadata:
  name: domain-prod
  namespace: production
  labels:
      app: domain-prod
      tier: prod
      prometheus-enabled: "true"
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
      app: domain-prod
      tier: prod
  sessionAffinity: None
  type: ClusterIP
